...
              onPressed: () async {
                final index = await popupManager.showAdaptivePicker(
                  initialItemIndex: 3,
                  context: context,
                  androidHeight: double.infinity,
                  children: [
                    const Text('Item 1'),
                    const Text('Item 2'),
                    const Text('Item 3'),
                    const Text('Item 4'),
                    const Text('Item 5'),
                  ],
                  title: const Text('Seçim yapınız'),
                );
...
