...
        builder: (context) {
          return Scaffold(
            appBar: AppBar(
              title: const Text('Reorderable ListView Example'),
              actions: [
                CoreTextButton(
                  child: const CoreText('Integration Test'),
                  onPressed: () => Navigator.of(context).push(MaterialPageRoute<void>(builder: (context) => const ReorderableListviewForIntegrationTest())),
                ),
              ],
            ),
            body: CoreSingleChildScrollView(
              onRefresh: () async {
...
